# OxiDeskWeb

./: .gitignore  Cargo.toml
backend/: Cargo.toml
frontend/: Cargo.toml
frontend/src/: lib.rs
static/: index.html
